update wrong format

--- a/students.html
+++ b/students.html
@@ -6,7 +6,7 @@ layout: default
 <div class="wrapper">
     	<section class="container">
 		<header class="major">
-			<h2>PhDs</h2>
+			<h2>Ph.D.</h2>
 		</header>
 		<div class="row features">
 			<section class="4u 12u(narrower) feature">
@@ -34,7 +34,7 @@ layout: default
 	</section>
 	<section class="container">
 		<header class="major">
-			<h2>Maseters</h2>
+			<h2>M.A.</h2>
 		</header>
 		<div class="row features">
 			<section class="3u 12u(narrower) feature">
@@ -65,7 +65,7 @@ layout: default
 	</section>
     	<section class="container">
 		<header class="major">
-			<h2>Interns</h2>
+			<h2>Intern</h2>
 		</header>
 		<div class="row features">
 			<section class="4u 12u(narrower) feature">
