--- a/students.html
+++ b/students.html
@@ -25,10 +25,9 @@ layout: default
 			</section>
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+					<a href="#" class="image featured"><img src="images/ouxingyu.jpg" alt="" /></a>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
+				<p>欧新宇</p>
 			</section>
 		</div>
 	</section>
