--- a/students.html
+++ b/students.html
@@ -25,9 +25,9 @@ layout: default
 			</section>
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/ouxingyu.jpg" alt="" /></a>
+					<a href="#" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
 				</div>
-				<p>欧新宇</p>
+				<p>Ou Xinyu(欧新宇)</p>
 			</section>
 		</div>
 	</section>
