--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ layout: home-default
 			<section class="6u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+					<video src="demo.mp4" controls autoplay loop muted preload="auto" poster="images/pic03.jpg" >
+					HTML5 Video is required for this example
+					</video>
 				</div>
 				<header>
 					<h2>Semper magna neque vel<br />
