--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@ layout: home-default
 	<div class="container">
 		<div class="row">
 			<section class="6u 12u(narrower) feature">
-				<div class="image-wrapper first">
-					<video src="demo.mp4" controls autoplay loop muted preload="auto" poster="images/pic03.jpg" ></video>
+				<div class="vedio">
+					<video width="320" height="240" controls="controls">
+					    <source src="demo.mp4" type="video/mp4" />
+  						<source src="demo.ogg" type="video/ogg" />
+  						<source src="demo.webm" type="video/webm" />
+						Your browser does not support the video tag.
+					</video>
 				</div>
 				<header>
 					<h2>Semper magna neque vel<br />
