--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@ layout: home-default
 					</video>
 				</div>
 				<header>
-					<h2>Semper magna neque vel<br />
-					adipiscing curabitur</h2>
+					<h2>A MakeUp System<br />
+					applied in the video</h2>
 				</header>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-				sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-				adipiscing elit. Curabitur vel sem sit.</p>
+				<p>We develop this system to make people look well when they FaceTime with
+					their friends or some other occasion.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Elevate my awareness</a></li>
+					<li><a href="#" class="button">Get More Info</a></li>
 				</ul>
 			</section>
 			<section class="6u 12u(narrower) feature">
