--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: home-default
 				</div>
 				<header>
 					<h2>A MakeUp System<br />
-					applied in the video</h2>
+					Applied In The Video</h2>
 				</header>
 				<p>We develop this system to make people look well when they FaceTime with
 					their friends or some other occasion.</p>
@@ -28,17 +28,15 @@ layout: home-default
 			</section>
 			<section class="6u 12u(narrower) feature">
 				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" /></a>
 				</div>
 				<header>
-					<h2>Amet lorem ipsum dolor<br />
-					sit consequat magna</h2>
+					<h2>Images Defogging</h2>
 				</header>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-				sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-				adipiscing elit. Curabitur vel sem sit.</p>
+				<p>When experience a foggy weather, it is extremely difficult to recognize
+					something.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Elevate my awareness</a></li>
+					<li><a href="#" class="button">Get More Info</a></li>
 				</ul>
 			</section>
 		</div>
