--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home-default
 	<div class="container">
 		<div class="row">
 			<section class="6u 12u(narrower) feature">
-				<div class="vedio">
+				<div class="main_project">
 					<video width="320" height="200" autoplay controls="controls">
 					    <source src="demo.mp4" type="video/mp4" />
   						<source src="demo.ogg" type="video/ogg" />
@@ -25,8 +25,6 @@ layout: home-default
 				<ul class="actions">
 					<li><a href="#" class="button">Get More Info</a></li>
 				</ul>
-			</section>
-			<section class="6u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" /></a>
 				</div>
