video and image arrange middle

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ layout: home-default
 				<ul class="actions">
 					<li><a href="#" class="button">Get More Info</a></li>
 				</ul>
+			</section>
+			<section class="6u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" /></a>
 				</div>
