--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@ layout: home-default
 	<div class="container">
 		<div class="row">
 			<section class="6u 12u(narrower) feature">
-				<div class="main_project">
-					<video width="320" height="200" autoplay controls="controls">
-					    <source src="demo.mp4" type="video/mp4" />
-  						<source src="demo.ogg" type="video/ogg" />
-  						<source src="demo.webm" type="video/webm" />
-						Your browser does not support the video tag.
-					</video>
+				<div class="image-wrapper">
+					<div class="image featured">
+						<video width="575" height="382" autoplay controls="controls">
+							<source src="26.mp4" type="video/mp4" />
+							<source src="26.ogg" type="video/ogg" />
+							<source src="26.webm" type="video/webm" />
+							Your browser does not support the video tag.
+						</video>
+					</div>
 				</div>
 				<header>
-					<h2>A MakeUp System<br />
-					Applied In The Video</h2>
+					<h3>A MakeUp System Applied In The Video</h3>
 				</header>
 				<p>We develop this system to make people look well when they FaceTime with
 					their friends or some other occasion.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Get More Info</a></li>
+					<li><a href="#" class="button">Join Us</a></li>
 				</ul>
 			</section>
 			<section class="6u 12u(narrower) feature">
@@ -31,12 +32,12 @@ layout: home-default
 					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" /></a>
 				</div>
 				<header>
-					<h2>Images Defogging</h2>
+					<h3>Images Defogging</h3>
 				</header>
 				<p>When experience a foggy weather, it is extremely difficult to recognize
 					something.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Get More Info</a></li>
+					<li><a href="#" class="button">Join Us</a></li>
 				</ul>
 			</section>
 		</div>
@@ -46,13 +47,13 @@ layout: home-default
 <!-- Promo -->
 <div id="promo-wrapper">
 	<section id="promo">
-		<h2>Neque semper magna et lorem ipsum adipiscing</h2>
-		<a href="#" class="button">Breach the thresholds</a>
+		<h2>Our Research Projects</h2>
+		<a href="#" class="button">Join Us</a>
 	</section>
 </div>
 
 <!-- Features 2 -->
-<div class="wrapper">
+<!--<div class="wrapper">
 	<section class="container">
 		<header class="major">
 			<h2>Sed magna consequat lorem curabitur tempus</h2>
@@ -85,5 +86,5 @@ layout: home-default
 			<li><a href="#" class="button">Elevate my awareness</a></li>
 		</ul>
 	</section>
-</div>
+</div>-->
 
