--- a/students.html
+++ b/students.html
@@ -10,7 +10,17 @@ layout: default
 		</header>
 		<div class="row features">
 			<section class="4u 12u(narrower) feature">
+
+			</section>
+
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
+					<a href="#" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
+				</div>
+				<p>Ou Xinyu(欧新宇)</p>
+			</section>
+			<!--<section class="4u 12u(narrower) feature">
+				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 				</div>
 				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
@@ -22,13 +32,7 @@ layout: default
 				</div>
 				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
 				vel sem sit dolor neque semper magna lorem ipsum.</p>
-			</section>
-			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
-				</div>
-				<p>Ou Xinyu(欧新宇)</p>
-			</section>
+			</section>-->
 		</div>
 	</section>
 	<section class="container">
@@ -36,58 +40,65 @@ layout: default
 			<h2>M.A.</h2>
 		</header>
 		<div class="row features">
-			<section class="3u 12u(narrower) feature">
+			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="#" class="image featured"><img src="images/yuhan.jpg" alt="" /></a>
 				</div>
 				<p>Han Yu(庾涵)</p>
 			</section>
-            <section class="3u 12u(narrower) feature">
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/qianruihe.png" alt="" /></a>
+				</div>
+				<p>Ruihe Qian(钱瑞和)</p>
+			</section>
+            <section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/jiajun.jpg" alt="" /></a>
 				</div>
-				<p>Gao Jiajun(高佳俊)</p>
+				<p>Jiajun Gao(高佳俊)</p>
 			</section>
-            <section class="3u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/liaoyue.jpg" alt="" /></a>
-				</div>
-				<p>Liao Yue(廖越)</p>
-			</section>
-			<section class="3u 12u(narrower) feature">
+			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/weizhen.jpg" alt="" /></a>
 				</div>
 				<p>Wei Zhen(魏震)</p>
 			</section>
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/renlejian.jpg" alt="" /></a>
+				</div>
+				<p>Lejian Ren(任乐建)</p>
+			</section>
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/liaoyue.jpg" alt="" /></a>
+				</div>
+				<p>Yue Liao(廖越)</p>
+			</section>
 		</div>
 	</section>
     	<section class="container">
-		<header class="major">
+		<!--<header class="major">
 			<h2>Intern</h2>
-		</header>
+		</header>-->
 		<div class="row features">
 			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper first">
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
+				
 			</section>
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+					<a href="#" class="image featured"><img src="images/inter.png" alt="" /></a>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
+				<p>Thrilled to have you!</p>
 			</section>
-			<section class="4u 12u(narrower) feature">
+			<!--<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 				</div>
 				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
 				vel sem sit dolor neque semper magna lorem ipsum.</p>
-			</section>
+			</section>-->
 		</div>
 	</section>
 </div>
