--- a/students.html
+++ b/students.html
@@ -68,7 +68,7 @@ layout: default
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/renlejian.jpg" alt="" /></a>
 				</div>
-				<p>Lejian Ren(任乐建)</p>
+				<p>Lejian Ren(任乐健)</p>
 			</section>
 			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
