--- a/students.html
+++ b/students.html
@@ -15,7 +15,7 @@ layout: default
 
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
-					<a href="#" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
+					<a href="https://ouxinyu.github.io" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
 				</div>
 				<p>Ou Xinyu(欧新宇)</p>
 			</section>
