--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,7 @@
-<!DOCTYPE HTML>
-<!--
-	Telephasic by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+---
+layout: default
+---
+
 <html>
 	<head>
 		<title>Telephasic by HTML5 UP</title>
