--- a/projects.html
+++ b/projects.html
@@ -2,232 +2,103 @@
 layout: default
 ---
 
-<html>
-	<head>
-		<title>Telephasic by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="right-sidebar">
-		<div id="page-wrapper">
+<!-- Features 2 -->
+<div class="wrapper">
+    	<section class="container">
+		<header class="major">
+			<h2>Ph.D.</h2>
+		</header>
+		<div class="row features">
+			<section class="4u 12u(narrower) feature">
 
-			<!-- Header -->
-				<div id="header-wrapper">
-					<div id="header" class="container">
+			</section>
 
-						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Telephasic</a></h1>
-
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li>
-										<a href="#">Dropdown</a>
-										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li class="break"><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-								</ul>
-							</nav>
-
-					</div>
+			<section class="4u 12u(narrower) feature">
+				<div class="image-wrapper first">
+					<a href="https://ouxinyu.github.io" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
 				</div>
-
-			<!-- Main -->
-				<div class="wrapper">
-					<div class="container" id="main">
-						<div class="row 150%">
-							<div class="8u 12u(narrower)">
-
-								<!-- Content -->
-									<article id="content">
-										<header>
-											<h2>Right Sidebar</h2>
-											<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit
-											dolor neque semper magna lorem ipsum.</p>
-										</header>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien
-										mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
-										condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
-										ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
-										eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
-										turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
-										Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
-										<p>Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum
-										gravida nibh eget, volutpat odio. Proin rhoncus, sapien
-										mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
-										condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
-										ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
-										eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
-										turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
-										Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
-										<p>Vestibulum pellentesque posuere lorem non aliquam. Mauris eleifend eleifend
-										felis aliquet ornare. Vestibulum porta velit at elementum elementum.</p>
-									</article>
-
-							</div>
-							<div class="4u 12u(narrower)">
-
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<header>
-												<h3>Elit sed feugiat</h3>
-											</header>
-											<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur et vel
-											sem sit amet dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et dolore
-											adipiscing elit. Curabitur vel sem sit.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">Magna amet nullam</a></li>
-											</ul>
-										</section>
-										<section>
-											<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-											<header>
-												<h3>Commodo lorem varius</h3>
-											</header>
-											<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur et vel
-											sem sit amet dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et dolore
-											adipiscing elit. Curabitur vel sem sit.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">Ipsum sed dolor</a></li>
-											</ul>
-										</section>
-									</section>
-
-							</div>
-						</div>
-						<div class="row features">
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper first">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h3>Dolor sit consequat magna</h3>
-								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
-								</ul>
-							</section>
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h3>Dolor sit consequat magna</h3>
-								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
-								</ul>
-							</section>
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h3>Dolor sit consequat magna</h3>
-								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
-								</ul>
-							</section>
-						</div>
-					</div>
+				<p>Ou Xinyu(欧新宇)</p>
+			</section>
+			<!--<section class="4u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 				</div>
-
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div id="footer" class="container">
-						<header class="major">
-							<h2>Euismod aliquam vehicula lorem</h2>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit<br />
-							dolor neque semper magna lorem ipsum feugiat veroeros lorem ipsum dolore.</p>
-						</header>
-						<div class="row">
-							<section class="6u 12u(narrower)">
-								<form method="post" action="#">
-									<div class="row 50%">
-										<div class="6u 12u(mobile)">
-											<input name="name" placeholder="Name" type="text" />
-										</div>
-										<div class="6u 12u(mobile)">
-											<input name="email" placeholder="Email" type="text" />
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<textarea name="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" /></li>
-												<li><input type="reset" value="Clear form" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
-							<section class="6u 12u(narrower)">
-								<div class="row 0%">
-									<ul class="divided icons 6u 12u(mobile)">
-										<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
-										<li class="icon fa-facebook"><a href="#"><span class="extra">facebook.com/</span>untitled</a></li>
-										<li class="icon fa-dribbble"><a href="#"><span class="extra">dribbble.com/</span>untitled</a></li>
-									</ul>
-									<ul class="divided icons 6u 12u(mobile)">
-										<li class="icon fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
-										<li class="icon fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
-										<li class="icon fa-pinterest"><a href="#"><span class="extra">pinterest.com/</span>untitled</a></li>
-									</ul>
-								</div>
-							</section>
-						</div>
-					</div>
-					<div id="copyright" class="container">
-						<ul class="menu">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
+				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
+				vel sem sit dolor neque semper magna lorem ipsum.</p>
+			</section>
+			<section class="4u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 				</div>
-
+				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
+				vel sem sit dolor neque semper magna lorem ipsum.</p>
+			</section>-->
 		</div>
-
-		<!-- Scripts -->
-
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+	</section>
+	<section class="container">
+		<header class="major">
+			<h2>M.A.</h2>
+		</header>
+		<div class="row features">
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper first">
+					<a href="#" class="image featured"><img src="images/yuhan.jpg" alt="" /></a>
+				</div>
+				<p>Han Yu(庾涵)</p>
+			</section>
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/qianruihe.png" alt="" /></a>
+				</div>
+				<p>Ruihe Qian(钱瑞和)</p>
+			</section>
+            <section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/jiajun.jpg" alt="" /></a>
+				</div>
+				<p>Jiajun Gao(高佳俊)</p>
+			</section>
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/weizhen.jpg" alt="" /></a>
+				</div>
+				<p>Wei Zhen(魏震)</p>
+			</section>
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/renlejian.jpg" alt="" /></a>
+				</div>
+				<p>Lejian Ren(任乐健)</p>
+			</section>
+			<section class="2u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/liaoyue.jpg" alt="" /></a>
+				</div>
+				<p>Yue Liao(廖越)</p>
+			</section>
+		</div>
+	</section>
+    	<section class="container">
+		<!--<header class="major">
+			<h2>Intern</h2>
+		</header>-->
+		<div class="row features">
+			<section class="4u 12u(narrower) feature">
+				
+			</section>
+			<section class="4u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/inter.png" alt="" /></a>
+				</div>
+				<p>Thrilled to have you!</p>
+			</section>
+			<!--<section class="4u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+				</div>
+				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
+				vel sem sit dolor neque semper magna lorem ipsum.</p>
+			</section>-->
+		</div>
+	</section>
+</div>
