--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 ---
-layout: home-default
+layout: default
 ---
 
 <!-- Features 2 -->
@@ -7,8 +7,8 @@ layout: home-default
     <section class="container">
     	<section class="6u 12u(narrower) feature">
 			<div class="image-wrapper">
-				<div class="image featured">
-					<video width="575" height="382" autoplay controls="controls">
+				<div class="image featured" align="middle">
+					<video width="575" height="382" autoplay controls="controls" >
 						<source src="26.mp4" type="video/mp4" />
 						<source src="26.ogg" type="video/ogg" />
 						<source src="26.webm" type="video/webm" />
