--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home-default
 		<div class="row">
 			<section class="6u 12u(narrower) feature">
 				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" /></a>
+					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" align = "middle"/></a>
 				</div>
 				<header>
 					<h3>Images Defogging</h3>
