--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: home-default
 <div id="promo-wrapper">
 	<section id="promo">
 		<h2>Our Research Projects</h2>
-		<a href="#" class="button">Join Us</a>
+		<a href="projects.html" class="button">Go</a>
 	</section>
 </div>
 
