--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,12 @@ layout: default
 <div class="wrapper">
     <section class="container">
     	<section class="6u 12u(narrower) feature">
-			<div class="image-wrapper">
+    		<header>
+				<h3 align="middle">A MakeUp System Applied In The Video</h3>
+			</header>
+			<p align="middle">We develop this system to make people look well when they FaceTime with
+				their friends or some other occasion.</p>
+			<div class="image-wrapper" align="middle">
 				<div class="image featured" align="middle">
 					<video width="575" height="382" autoplay controls="controls" >
 						<source src="26.mp4" type="video/mp4" />
@@ -16,12 +21,7 @@ layout: default
 					</video>
 				</div>
 			</div>
-			<header>
-				<h3>A MakeUp System Applied In The Video</h3>
-			</header>
-			<p>We develop this system to make people look well when they FaceTime with
-				their friends or some other occasion.</p>
-			<ul class="actions">
+			<ul class="actions" >
 				<li><a href="#" class="button">Join Us</a></li>
 			</ul>
 		</section>	
