--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home-default
 
 
 
-<div class="wrapper">
+<div class="wrapper" align="middle">
 	<div class="container">
 		<div class="row">
 			<section class="6u 12u(narrower) feature">
