--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Features 2 -->
-<div class="wrapper">
+<div class="wrapper" align="middle">
     <section class="container">
     	<section class="6u 12u(narrower) feature">
     		<header>
@@ -11,8 +11,8 @@ layout: default
 			</header>
 			<p align="middle">We develop this system to make people look well when they FaceTime with
 				their friends or some other occasion.</p>
-			<div class="image-wrapper" align="middle">
-				<div class="image featured" align="middle">
+			<div class="image-wrapper" >
+				<div class="image featured">
 					<video width="575" height="382" autoplay controls="controls" >
 						<source src="26.mp4" type="video/mp4" />
 						<source src="26.ogg" type="video/ogg" />
