--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home-default
 
 
 <div class="wrapper" align="middle">
-	<div class="container">
+	<div class="container" align="middle">
 		<div class="row">
 			<section class="6u 12u(narrower) feature">
 				<div class="image-wrapper">
