--- a/people.html
+++ b/people.html
@@ -4,13 +4,16 @@ layout: default
 
 <!-- Features 2 -->
 <div class="wrapper">
-    	<section class="container">
+    <section class="container">
 		<header class="major">
-			<h2>Ph.D.</h2>
+			<h2>visiting professor</h2>
 		</header>
 		<div class="row features">
 			<section class="4u 12u(narrower) feature">
-
+				<div class="image-wrapper first">
+					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
+				</div>
+				<p>Wei Wang(王伟)</p>
 			</section>
 
 			<section class="4u 12u(narrower) feature">
@@ -39,7 +42,7 @@ layout: default
 		<header class="major">
 			<h2>M.A.</h2>
 		</header>
-		<div class="row features">
+		<div class="">
 			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="#" class="image featured"><img src="images/yuhan.jpg" alt="" /></a>
