--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Features 2 -->
-<div class="wrapper" align="middle">
+<div class="wrapper">
     <section class="container">
     	<section class="6u 12u(narrower) feature">
     		<header>
