--- a/people.html
+++ b/people.html
@@ -13,6 +13,7 @@ layout: default
 				<div class="image-wrapper first">
 					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
 				</div>
+				<p>Research Direction: People Re-identification</p>
 				<p>Wei Wang(王伟)</p>
 			</section>
 
@@ -20,6 +21,7 @@ layout: default
 				<div class="image-wrapper first">
 					<a href="https://ouxinyu.github.io" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
 				</div>
+				<p>Research Direction: Scene Parsing</p>
 				<p>Ou Xinyu(欧新宇)</p>
 			</section>
 			<!--<section class="4u 12u(narrower) feature">
