--- a/people.html
+++ b/people.html
@@ -9,20 +9,22 @@ layout: default
 			<h2>visiting professor</h2>
 		</header>
 		<div class="row features">
-			<section class="4u 12u(narrower) feature">
+			<!--section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
 				</div>
 				<p>Research Direction: People Re-identification</p>
 				<p>Wei Wang(王伟)</p>
-			</section>
+			</section-->
 
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="https://ouxinyu.github.io" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
 				</div>
-				<p>Research Direction: Scene Parsing</p>
-				<p>Ou Xinyu(欧新宇)</p>
+				<article id="content">
+					<p>Research Direction: Scene Parsing</p>
+					<p>Ou Xinyu(欧新宇)</p>
+				</article>
 			</section>
 			<!--<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
@@ -45,12 +47,14 @@ layout: default
 			<h2>M.A.</h2>
 		</header>
 		<div class="">
-			<section class="2u 12u(narrower) feature">
-				<div class="image-wrapper first">
-					<a href="#" class="image featured"><img src="images/yuhan.jpg" alt="" /></a>
-				</div>
-				<p>Han Yu(庾涵)</p>
-			</section>
+			<div class="row features">
+				<section class="2u 12u(narrower) feature">
+					<div class="image-wrapper first">
+						<a href="#" class="image featured"><img src="images/yuhan.jpg" alt="" /></a>
+					</div>
+					<p>Han Yu(庾涵)</p>
+				</section>
+			</div>
 			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/qianruihe.png" alt="" /></a>
