--- a/people.html
+++ b/people.html
@@ -6,16 +6,19 @@ layout: default
 <div class="wrapper">
     <section class="container">
 		<header class="major">
-			<h2>visiting professor</h2>
+			<h2>Visiting Professor</h2>
 		</header>
 		<div class="row features">
-			<!--section class="4u 12u(narrower) feature">
+			<section class="4u 12u(narrower) feature">
+				
+			</section>
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
 				</div>
 				<p>Research Direction: People Re-identification</p>
 				<p>Wei Wang(王伟)</p>
-			</section-->
+			</section>
 
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
@@ -25,6 +28,9 @@ layout: default
 					<p>Research Direction: Scene Parsing</p>
 					<p>Ou Xinyu(欧新宇)</p>
 				</article>
+			</section>
+			<section class="4u 12u(narrower) feature">
+				
 			</section>
 			<!--<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
