--- a/people.html
+++ b/people.html
@@ -19,7 +19,9 @@ layout: default
 				<p>Research Direction: People Re-identification</p>
 				<p>Wei Wang(王伟)</p>
 			</section>
-
+			<section class="3u 12u(narrower) feature">
+				
+			</section>
 			<section class="3u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="https://ouxinyu.github.io" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
