--- a/people.html
+++ b/people.html
@@ -4,29 +4,53 @@ layout: default
 
 <!-- Features 2 -->
 <div class="wrapper">
-    <section class="container">
+	<section class="container">
 		<header class="major">
-			<h2>Visiting Professor</h2>
+			<h2>Researcher</h2>
 		</header>
 		<div class="row features">
-			
 			<section class="4u 12u(narrower) feature">
+			</section>
+
+			<section class="4u 12u(narrower) feature">
+				<div class="image-wrapper first">
+					<a href="https://liusi-group.com" class="image featured"><img src="images/siliu.png" alt="" /></a>
+				</div>
+				<article id="content">
+					<p>Si Liu</p>
+					<h3>Research Direction:</h3>	
+					<p> sematic segmentation, people re-identification, object tracking, image retrieval</p>
+				</article>
+			</section>
+		</div>
+	</section>
+    <section class="container">
+		<header class="major">
+			<h2>VISITING PROFESSOR</h2>
+		</header>
+		<div class="row features">
+			<section class="3u 12u(narrower) feature">
+				
+			</section>
+			<section class="3u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
 				</div>
-				<p>Research Direction: People Re-identification</p>
-				<p>Wei Wang(王伟)</p>
+				<article id="content">
+					<p>Wei Wang(王伟)</p>
+					<h3>Research Direction:</h3>
+					<p>People Re-identification</p>
+				</article>
 			</section>
-			<section class="4u 12u(narrower) feature">
-				
-			</section>
-			<section class="4u 12u(narrower) feature">
+			
+			<section class="3u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="https://ouxinyu.github.io" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
 				</div>
 				<article id="content">
-					<p>Research Direction: Scene Parsing</p>
 					<p>Ou Xinyu(欧新宇)</p>
+					<h3>Research Direction:</h3>
+					<p> Scene Parsing</p>
 				</article>
 			</section>
 			
@@ -48,7 +72,7 @@ layout: default
 	</section>
 	<section class="container">
 		<header class="major">
-			<h2>M.A.</h2>
+			<h2>MASTERS</h2>
 		</header>
 		<div class="">
 			<div class="row features">
@@ -56,39 +80,73 @@ layout: default
 					<div class="image-wrapper first">
 						<a href="#" class="image featured"><img src="images/yuhan.jpg" alt="" /></a>
 					</div>
-					<p>Han Yu(庾涵)</p>
+				</section>
+				<section>
+					<h3>Han Yu(庾涵)</h3>
+					<h4>research direction:</h4>
+					<p>weakly supervised semantic segmentation</p>
 				</section>
 			</div>
+			<div class="row features">
 			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/qianruihe.png" alt="" /></a>
 				</div>
-				<p>Ruihe Qian(钱瑞和)</p>
 			</section>
+			<section>
+					<h3>Ruihe Qian(钱瑞和)</h3>
+					<h4>research direction:</h4>
+					<p>video segmentation</p>
+				</section>
+			</div>
+			<div class="row features">
             <section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/jiajun.jpg" alt="" /></a>
 				</div>
-				<p>Jiajun Gao(高佳俊)</p>
 			</section>
+			<section>
+					<h3>Jiajun Gao(高佳俊)</h3>
+					<h4>research direction:</h4>
+					<p>scene image understanding</p>
+			</section>
+			</div>
+			<div class="row features">
 			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/weizhen.jpg" alt="" /></a>
 				</div>
-				<p>Wei Zhen(魏震)</p>
 			</section>
+			<section>
+					<h3>Wei Zhen(魏震)</h3>
+					<h4>research direction:</h4>
+					<p>face parsing</p>
+			</section>
+			</div>
+			<div class="row features">
 			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/renlejian.jpg" alt="" /></a>
 				</div>
-				<p>Lejian Ren(任乐健)</p>
 			</section>
+			<section>
+					<h3>Lejian Ren(任乐健)</h3>
+					<h4>research direction:</h4>
+					<p>multiple human parsing</p>
+			</section>
+			</div>
+			<div class="row features">
 			<section class="2u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/liaoyue.jpg" alt="" /></a>
 				</div>
-				<p>Yue Liao(廖越)</p>
 			</section>
+			<section>
+					<h3>Yue Liao(廖越)</h3>
+					<h4>research direction:</h4>
+					<p>human pose estimation</p>
+			</section>
+			</div>
 		</div>
 	</section>
     	<section class="container">
