--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@ layout: home-default
 <div class="wrapper" align="middle">
 	<div class="container" align="middle">
 		<div class="row">
-			<section class="6u 12u(narrower) feature">
+			<section class="4u 12u(narrower) feature">
+			</section>
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" align = "middle"/></a>
 				</div>
-				<header>
+				<!---header>
 					<h3>Images Defogging</h3>
-				</header>
-				<p>When experience a foggy weather, it is extremely difficult to recognize
-					something.</p>
+				</header-->
+				<!--p>When experience a foggy weather, it is extremely difficult to recognize
+					something.</p-->
 				<ul class="actions">
-					<li><a href="#" class="button">Join Us</a></li>
+					<li><a href="joinus.html" class="button">Join Us</a></li>
 				</ul>
 			</section>
 		</div>
@@ -26,10 +28,18 @@ layout: home-default
 
 <!-- Promo -->
 <div id="promo-wrapper">
-	<section id="promo">
-		<h2>Our Research Projects</h2>
-		<a href="projects.html" class="button">Go</a>
-	</section>
+	<div class="row features">
+		<section class="2u 12u(narrower) feature">
+			</section>
+		<section id="promo" class = "4u 12u(narrower) feature">
+			<h2>Our Research Projects</h2>
+			<a href="projects.html" class="button">Go</a>
+		</section>
+		<section id="promo" class = "4u 12u(narrower) feature">
+			<h2>Publications</h2>
+			<a href="left-sidebar.html" class="button">Go</a>
+		</section>
+	</div>
 </div>
 
 <!-- Features 2 -->
