--- a/projects.html
+++ b/projects.html
@@ -5,25 +5,30 @@ layout: default
 <!-- Features 2 -->
 <div class="wrapper">
     <section class="container">
-    	<section class="6u 12u(narrower) feature">
-    		<header>
-				<h3 align="middle">A MakeUp System Applied In The Video</h3>
-			</header>
-			<p align="middle">We develop this system to make people look well when they FaceTime with
-				their friends or some other occasion.</p>
-			<div class="image-wrapper" >
-				<div class="image featured">
-					<video width="575" height="382" autoplay controls="controls" >
-						<source src="26.mp4" type="video/mp4" />
-						<source src="26.ogg" type="video/ogg" />
-						<source src="26.webm" type="video/webm" />
-						Your browser does not support the video tag.
-					</video>
+    	<div class="row features">
+    		<section class="3u 12u(narrower) feature">
+			</section>
+
+	    	<section class="6u 12u(narrower) feature">
+	    		<header>
+					<h3 align="middle">A MakeUp System Applied In The Video</h3>
+				</header>
+				<p align="middle">We develop this system to make people look well when they FaceTime with
+					their friends or some other occasion.</p>
+				<div class="image-wrapper" >
+					<div class="image featured">
+						<video width="575" height="382" autoplay controls="controls" >
+							<source src="26.mp4" type="video/mp4" />
+							<source src="26.ogg" type="video/ogg" />
+							<source src="26.webm" type="video/webm" />
+							Your browser does not support the video tag.
+						</video>
+					</div>
 				</div>
-			</div>
-			<ul class="actions" >
-				<li><a href="#" class="button">Join Us</a></li>
-			</ul>
-		</section>	
+				<ul class="actions" >
+					<li><a href="joinus.html" class="button">Join Us</a></li>
+				</ul>
+			</section>	
+		</div>
 	</section>
 </div>
