--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@ layout: home-default
 <!-- Promo -->
 <div id="promo-wrapper">
 	<div class="row features">
-		<section class="2u 12u(narrower) feature">
+		<section class="4u 12u(narrower) feature">
 			</section>
 		<section id="promo" class = "4u 12u(narrower) feature">
-			<h2>Our Research Projects</h2>
-			<a href="projects.html" class="button">Go</a>
-		</section>
-		<section id="promo" class = "4u 12u(narrower) feature">
-			<h2>Publications</h2>
-			<a href="left-sidebar.html" class="button">Go</a>
+			<h2>Our Activities</h2>
+			<a href="activity.html" class="button">Go</a>
 		</section>
 	</div>
 </div>
