--- a/people.html
+++ b/people.html
@@ -18,8 +18,8 @@ layout: default
 				</div>
 				<article id="content">
 					<p>Si Liu</p>
-					<h3>Research Direction:</h3>	
-					<p> sematic segmentation, people re-identification, object tracking, image retrieval</p>
+					<h3>&nbsp;&nbsp;Research Direction:</h3>	
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;sematic segmentation, people re-identification, object tracking, image retrieval</p>
 				</article>
 			</section>
 		</div>
@@ -38,8 +38,8 @@ layout: default
 				</div>
 				<article id="content">
 					<p>Wei Wang(王伟)</p>
-					<h3>Research Direction:</h3>
-					<p>People Re-identification</p>
+					<h3>&nbsp;&nbsp;Research Direction:</h3>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;People Re-identification</p>
 				</article>
 			</section>
 			
@@ -49,8 +49,8 @@ layout: default
 				</div>
 				<article id="content">
 					<p>Ou Xinyu(欧新宇)</p>
-					<h3>Research Direction:</h3>
-					<p> Scene Parsing</p>
+					<h3>&nbsp;&nbsp;Research Direction:</h3>
+					<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scene Parsing</p>
 				</article>
 			</section>
 			
@@ -84,7 +84,7 @@ layout: default
 				<section>
 					<h3>Han Yu(庾涵)</h3>
 					<h4>research direction:</h4>
-					<p>weakly supervised semantic segmentation</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;weakly supervised semantic segmentation</p>
 				</section>
 			</div>
 			<div class="row features">
@@ -96,7 +96,7 @@ layout: default
 			<section>
 					<h3>Ruihe Qian(钱瑞和)</h3>
 					<h4>research direction:</h4>
-					<p>video segmentation</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;video segmentation</p>
 				</section>
 			</div>
 			<div class="row features">
@@ -108,7 +108,7 @@ layout: default
 			<section>
 					<h3>Jiajun Gao(高佳俊)</h3>
 					<h4>research direction:</h4>
-					<p>scene image understanding</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;scene image understanding</p>
 			</section>
 			</div>
 			<div class="row features">
@@ -120,7 +120,7 @@ layout: default
 			<section>
 					<h3>Wei Zhen(魏震)</h3>
 					<h4>research direction:</h4>
-					<p>face parsing</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;face parsing</p>
 			</section>
 			</div>
 			<div class="row features">
@@ -132,7 +132,7 @@ layout: default
 			<section>
 					<h3>Lejian Ren(任乐健)</h3>
 					<h4>research direction:</h4>
-					<p>multiple human parsing</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;multiple human parsing</p>
 			</section>
 			</div>
 			<div class="row features">
@@ -144,7 +144,7 @@ layout: default
 			<section>
 					<h3>Yue Liao(廖越)</h3>
 					<h4>research direction:</h4>
-					<p>human pose estimation</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;human pose estimation</p>
 			</section>
 			</div>
 		</div>
@@ -161,6 +161,7 @@ layout: default
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/inter.png" alt="" /></a>
 				</div>
+				<a href="activity.html">Our activities</a>
 				<p>Thrilled to have you!</p>
 			</section>
 			<!--<section class="4u 12u(narrower) feature">
