--- a/index.html
+++ b/index.html
@@ -1,76 +1,57 @@
 ---
-layout: home-default
+layout: default
 ---
 
+<div>
 
+  <section>
+    <h1>S-Lab: Segmentation Group</h1>
+    <p>
+      &nbsp;&nbsp;&nbsp;Institute of Information Engineering. CAS
+    </p>
+  </section>
 
-<div class="wrapper" align="middle">
-	<div class="container" align="middle">
-		<div class="row">
-			<section class="4u 12u(narrower) feature">
-			</section>
-			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/cas.jpg" alt="" align = "middle"/></a>
-				</div>
-				<!---header>
-					<h3>Images Defogging</h3>
-				</header-->
-				<!--p>When experience a foggy weather, it is extremely difficult to recognize
-					something.</p-->
-				<ul class="actions">
-					<li><a href="joinus.html" class="button">Join Us</a></li>
-				</ul>
-			</section>
-		</div>
-	</div>
-</div>
+  <section>
+    <div class="container">    
+      <section id="hero2" class="8u 12u(narrower) feature">
+        <article id="content">
+          <p>
+            Dr. Si Liu is an Associate Professor in Institute of Information Engineering, Chinese Academy of Sciences. She used to be a Research Fellow in Learn­ing and Vi­sion Re­search Group at the De­part­ment of Elec­tri­cal and Com­put­er En­gi­neer­ing, Na­tion­al Uni­ver­si­ty of Sin­ga­pore, di­rect­ed by Prof. Shuicheng Yan. She obtained Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA), under the  supervision of Prof. Hanqing Lu. She obtained Bachelor degree from Experimental Class of Beijing Institute of Technology (BIT).
+          </p>
+          <p>
+            Her current research interests include Object Categorization, Object Detection, Image Parsing and Human Pose Estimation. She is also interested in the applications, such as Makeup Recommendation and Synthesis, Clothes Retrieval, Clothes Recommendation.
+          </p>
+        </article>
+      </section>
+    </div>
+  </section>
 
-<!-- Promo -->
-<div id="promo-wrapper">
-	<div class="row features">
-		<section class="4u 12u(narrower) feature">
-			</section>
-		<section id="promo" class = "4u 12u(narrower) feature">
-			<h2>Our Activities</h2>
-			<a href="activity.html" class="button">Go</a>
-		</section>
-	</div>
-</div>
+  <!--section>
+    
+  </section>
 
-<!-- Features 2 -->
-<!--<div class="wrapper">
-	<section class="container">
-		<header class="major">
-			<h2>Sed magna consequat lorem curabitur tempus</h2>
-			<p>Elit aliquam vulputate egestas euismod nunc semper vehicula lorem blandit</p>
-		</header>
-		<div class="row features">
-			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper first">
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
-			</section>
-			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
-			</section>
-			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
-			</section>
-		</div>
-		<ul class="actions major">
-			<li><a href="#" class="button">Elevate my awareness</a></li>
-		</ul>
-	</section>
-</div>-->
+  <section>
+    <h2>Getting started</h2>
 
+    <p>
+      <ol>
+        <li>Make sure you have <code>Jekyll</code> up and running</li>
+        <li>Clone
+          <a href="https://github.com/wemake-services/jekyll-theme-hackcss">this repository</a>
+        </li>
+        <li>Customize it</li>
+        <li>Push to <a href="https://pages.github.com/">gh-pages</a></li>
+      </ol>
+
+    </p>
+  </section>
+
+  <section>
+    <h2>Subscribe</h2>
+
+    <p>
+      subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>
+    </p>
+  </section>
+
+</div-->
