--- a/people.html
+++ b/people.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: people
 ---
 
 <!-- Features 2 -->
@@ -8,66 +9,53 @@ layout: default
 		<header class="major">
 			<h2>Researcher</h2>
 		</header>
-		<div class="row features">
-			<section class="4u 12u(narrower) feature">
-			</section>
 
-			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper first">
-					<a href="https://liusi-group.com" class="image featured"><img src="images/siliu.png" alt="" /></a>
-				</div>
-				<article id="content">
-					<p>Si Liu</p>
-					<h3>&nbsp;&nbsp;Research Direction:</h3>	
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;sematic segmentation, people re-identification, object tracking, image retrieval</p>
-				</article>
-			</section>
-		</div>
+    <div class="row features">
+      <section class="4u 12u(narrower) feature">
+        <div class="image-wrapper">
+          <a href="https://liusi-group.com" class="image featured"><img src="images/siliu.png" alt="" /></a>
+        </div>
+      </section>
+      <section class="8u 12u(narrower) feature">
+        <article id="content">
+          <p>Si Liu</p>
+          <h3>Research Direction:</h3>
+          <p>sematic segmentation, people re-identification, object tracking, image retrieval</p>
+        </article>
+      </section>
+    </div>
 	</section>
-    <section class="container">
+  <section class="container">
 		<header class="major">
-			<h2>VISITING PROFESSOR</h2>
+			<h2>VISITOR</h2>
 		</header>
 		<div class="row features">
-			<section class="3u 12u(narrower) feature">
-				
+			<section class="2u 12u(narrower) feature">
+
 			</section>
-			<section class="3u 12u(narrower) feature">
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
 				</div>
 				<article id="content">
 					<p>Wei Wang(王伟)</p>
-					<h3>&nbsp;&nbsp;Research Direction:</h3>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;People Re-identification</p>
+					<h3>Research Direction:</h3>
+					<p>People Re-identification</p>
 				</article>
 			</section>
-			
-			<section class="3u 12u(narrower) feature">
+	    <section class="2u 12u(narrower) feature">
+
+			</section>
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
 					<a href="https://ouxinyu.github.io" class="image featured"><img src="images/ouxinyu.jpg" alt="" /></a>
 				</div>
 				<article id="content">
 					<p>Ou Xinyu(欧新宇)</p>
-					<h3>&nbsp;&nbsp;Research Direction:</h3>
-					<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scene Parsing</p>
+					<h3>Research Direction:</h3>
+					<p> Scene Parsing</p>
 				</article>
 			</section>
-			
-			<!--<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
-			</section>
-			<section class="4u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-				</div>
-				<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-				vel sem sit dolor neque semper magna lorem ipsum.</p>
-			</section>-->
 		</div>
 	</section>
 	<section class="container">
@@ -76,19 +64,19 @@ layout: default
 		</header>
 		<div class="">
 			<div class="row features">
-				<section class="2u 12u(narrower) feature">
+				<section class="4u 12u(narrower) feature">
 					<div class="image-wrapper first">
 						<a href="#" class="image featured"><img src="images/yuhan.jpg" alt="" /></a>
 					</div>
 				</section>
 				<section>
 					<h3>Han Yu(庾涵)</h3>
-					<h4>research direction:</h4>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;weakly supervised semantic segmentation</p>
+					<p>research direction:</p>
+					<p>weakly supervised semantic segmentation</p>
 				</section>
 			</div>
 			<div class="row features">
-			<section class="2u 12u(narrower) feature">
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/qianruihe.png" alt="" /></a>
 				</div>
@@ -96,11 +84,11 @@ layout: default
 			<section>
 					<h3>Ruihe Qian(钱瑞和)</h3>
 					<h4>research direction:</h4>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;video segmentation</p>
+					<p>video segmentation</p>
 				</section>
 			</div>
 			<div class="row features">
-            <section class="2u 12u(narrower) feature">
+            <section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/jiajun.jpg" alt="" /></a>
 				</div>
@@ -108,11 +96,11 @@ layout: default
 			<section>
 					<h3>Jiajun Gao(高佳俊)</h3>
 					<h4>research direction:</h4>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;scene image understanding</p>
+					<p>scene image understanding</p>
 			</section>
 			</div>
 			<div class="row features">
-			<section class="2u 12u(narrower) feature">
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/weizhen.jpg" alt="" /></a>
 				</div>
@@ -120,11 +108,11 @@ layout: default
 			<section>
 					<h3>Wei Zhen(魏震)</h3>
 					<h4>research direction:</h4>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;face parsing</p>
+					<p>face parsing</p>
 			</section>
 			</div>
 			<div class="row features">
-			<section class="2u 12u(narrower) feature">
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/renlejian.jpg" alt="" /></a>
 				</div>
@@ -132,11 +120,11 @@ layout: default
 			<section>
 					<h3>Lejian Ren(任乐健)</h3>
 					<h4>research direction:</h4>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;multiple human parsing</p>
+					<p>multiple human parsing</p>
 			</section>
 			</div>
 			<div class="row features">
-			<section class="2u 12u(narrower) feature">
+			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/liaoyue.jpg" alt="" /></a>
 				</div>
@@ -144,7 +132,7 @@ layout: default
 			<section>
 					<h3>Yue Liao(廖越)</h3>
 					<h4>research direction:</h4>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;human pose estimation</p>
+					<p>human pose estimation</p>
 			</section>
 			</div>
 		</div>
@@ -155,7 +143,7 @@ layout: default
 		</header>-->
 		<div class="row features">
 			<section class="4u 12u(narrower) feature">
-				
+
 			</section>
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
