--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: projects
 ---
 
 <!-- Features 2 -->
@@ -25,9 +26,6 @@ layout: default
 						</video>
 					</div>
 				</div>
-				<ul class="actions" >
-					<li><a href="joinus.html" class="button">Join Us</a></li>
-				</ul>
 			</section>	
 		</div>
 	</section>
