--- a/people.html
+++ b/people.html
@@ -18,9 +18,8 @@ permalink: people
 					<a href="https://liusi-group.com" class="image featured"><img src="" alt="" /></a>
 				</div>
 				<article id="content">
-					<p>Si Liu</p>
-					<h3>&nbsp;&nbsp;Research Direction:</h3>	
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;sematic segmentation, people re-identification, object tracking, image retrieval</p>
+					<h2>Si Liu</h2>
+					<b>&nbsp;&nbsp;Research Direction:</b>sematic segmentation, people re-identification, object tracking, image retrieval</p>
 				</article>
 			</section>
 		</div>
@@ -38,7 +37,7 @@ permalink: people
 					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
 				</div>
 				<article id="content">
-					<b>Wei Wang(王伟)</b><br/>
+					<b>Wei Wang(王暐)</b><br/>
 					<b>research direction:</b><br/>
 					&nbsp;&nbsp;People Re-identification</p>
 				</article>
@@ -126,6 +125,14 @@ permalink: people
 				<b>Lejian Ren(任乐健)</b><br />
 				<b>research direction:</b><br/>
 				&nbsp;&nbsp;multiple human parsing</p>
+			</section>	
+			<section class="3u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/baorenda.jpg" alt="" /></a>
+				</div>
+				<b>Renda Bao()</b><br />
+				<b>research direction:</b><br/>
+				&nbsp;&nbsp;singel human parsing</p>
 			</section>	
 			<section class="3u 12u(narrower) feature">
 				<div class="image-wrapper">
