--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@ layout: default
 
 <div>
 
-  <section>
+<div class="row features">
+  <section class = "8u 12u(narrower) feature">
     <h1>S-Lab: Segmentation Group</h1>
     <p>
       &nbsp;&nbsp;&nbsp;Institute of Information Engineering. CAS
     </p>
   </section>
+  <section class="2u 12u(narrower) feature">
+    <div class="image-wrapper">
+      <a href="#" class="image featured"><img src="images/logo.jpg" alt="" /></a>
+    </div>
+        
+  </section>
+</div>
+  
 
   <section>
     <div class="container">    
@@ -25,7 +34,7 @@ layout: default
       </section>
     </div>
   </section>
-
+</div>
   <!--section>
     
   </section>
