--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@ layout: default
 <div>
 
 <div class="row features">
+  
   <section class = "8u 12u(narrower) feature">
     <h1>S-Lab: Segmentation Group</h1>
     <p>
-      &nbsp;&nbsp;&nbsp;Institute of Information Engineering. CAS
+      &nbsp;&nbsp;&nbsp;Institute of Information Engineering, CAS
     </p>
   </section>
   <section class="2u 12u(narrower) feature">
     <div class="image-wrapper">
       <a href="#" class="image featured"><img src="images/logo.jpg" alt="" /></a>
     </div>
-        
   </section>
 </div>
   
