--- a/index.html
+++ b/index.html
@@ -2,65 +2,32 @@
 layout: default
 ---
 
-<div>
-
 <div class="row features">
-  
-  <section class = "8u 12u(narrower) feature">
-    <h1>S-Lab: Segmentation Group</h1>
-    <p>
-      &nbsp;&nbsp;&nbsp;Institute of Information Engineering, CAS
-    </p>
-  </section>
-  <section class="2u 12u(narrower) feature">
-    <div class="image-wrapper">
-      <a href="#" class="image featured"><img src="images/logo.jpg" alt="" /></a>
-    </div>
-  </section>
-</div>
-  
+    <section class="2u 12u(narrower) feature">
+        <div class="image-wrapper">
+            <a href="#" class="image featured"><img src="images/logo.jpg" alt="" /></a>
+        </div>
+    </section>
+    <section class="8u 12u(narrower) feature">
+        <h1>S-Lab: Segmentation Group</h1>
+        <center>Institute of Information Engineering, CAS</center>
+    </section>
 
-  <section>
-    <div class="container">    
-      <section id="hero2" class="8u 12u(narrower) feature">
+    <section class="container">
         <article id="content">
-          <p>
-            Dr. Si Liu is an Associate Professor in Institute of Information Engineering, Chinese Academy of Sciences. She used to be a Research Fellow in Learn­ing and Vi­sion Re­search Group at the De­part­ment of Elec­tri­cal and Com­put­er En­gi­neer­ing, Na­tion­al Uni­ver­si­ty of Sin­ga­pore, di­rect­ed by Prof. Shuicheng Yan. She obtained Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA), under the  supervision of Prof. Hanqing Lu. She obtained Bachelor degree from Experimental Class of Beijing Institute of Technology (BIT).
-          </p>
-          <p>
-            Her current research interests include Object Categorization, Object Detection, Image Parsing and Human Pose Estimation. She is also interested in the applications, such as Makeup Recommendation and Synthesis, Clothes Retrieval, Clothes Recommendation.
-          </p>
+            <p>
+                Dr. Si Liu is an Associate Professor in Institute of Information Engineering, Chinese Academy of Sciences. She used to be
+                a Research Fellow in Learn­ing and Vi­sion Re­search Group at the De­part­ment of Elec­tri­cal and Com­put­er
+                En­gi­neer­ing, Na­tion­al Uni­ver­si­ty of Sin­ga­pore, di­rect­ed by Prof. Shuicheng Yan. She obtained
+                Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA), under the supervision
+                of Prof. Hanqing Lu. She obtained Bachelor degree from Experimental Class of Beijing Institute of Technology
+                (BIT).
+            </p>
+            <p>
+                Her current research interests include Object Categorization, Object Detection, Image Parsing and Human Pose Estimation.
+                She is also interested in the applications, such as Makeup Recommendation and Synthesis, Clothes Retrieval,
+                Clothes Recommendation.
+            </p>
         </article>
-      </section>
-    </div>
-  </section>
+    </section>
 </div>
-  <!--section>
-    
-  </section>
-
-  <section>
-    <h2>Getting started</h2>
-
-    <p>
-      <ol>
-        <li>Make sure you have <code>Jekyll</code> up and running</li>
-        <li>Clone
-          <a href="https://github.com/wemake-services/jekyll-theme-hackcss">this repository</a>
-        </li>
-        <li>Customize it</li>
-        <li>Push to <a href="https://pages.github.com/">gh-pages</a></li>
-      </ol>
-
-    </p>
-  </section>
-
-  <section>
-    <h2>Subscribe</h2>
-
-    <p>
-      subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>
-    </p>
-  </section>
-
-</div-->
