--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@ layout: default
 ---
 
 <div class="row features">
-    <section class="2u 12u(narrower) feature">
+    <section class="3u 12u(narrower) feature">
         <div class="image-wrapper">
-            <a href="#" class="image featured"><img src="images/logo.jpg" alt="" /></a>
+            <a href="#" class="image featured"><img src="images/logo.png" alt="" /></a>
         </div>
     </section>
-    <section class="8u 12u(narrower) feature">
+    <section class="7u 12u(narrower) feature">
         <h1>S-Lab: Segmentation Group</h1>
-        <center>Institute of Information Engineering, CAS</center>
+        <center><a href="http://iie.ac.cn/jggk_101117/zzjg/kybm/zncl/201203/t20120331_3547828.html">SKLOIS</a>,&nbsp;&nbsp;<a href="http://iie.ac.cn/">Institute of Information Engineering</a>&nbsp;,<a href = "http://www.cas.cn/">CAS</a></center>
     </section>
 
     <section class="container">
         <article id="content">
             <p>
-                Dr. Si Liu is an Associate Professor in Institute of Information Engineering, Chinese Academy of Sciences. She used to be
+                &nbsp;&nbsp;Dr. Si Liu is an Associate Professor in Institute of Information Engineering, Chinese Academy of Sciences. She used to be
                 a Research Fellow in Learn­ing and Vi­sion Re­search Group at the De­part­ment of Elec­tri­cal and Com­put­er
                 En­gi­neer­ing, Na­tion­al Uni­ver­si­ty of Sin­ga­pore, di­rect­ed by Prof. Shuicheng Yan. She obtained
                 Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA), under the supervision
@@ -24,7 +24,7 @@ layout: default
                 (BIT).
             </p>
             <p>
-                Her current research interests include Object Categorization, Object Detection, Image Parsing and Human Pose Estimation.
+                &nbsp;&nbsp;Her current research interests include Object Categorization, Object Detection, Image Parsing and Human Pose Estimation.
                 She is also interested in the applications, such as Makeup Recommendation and Synthesis, Clothes Retrieval,
                 Clothes Recommendation.
             </p>
