--- a/people.html
+++ b/people.html
@@ -29,7 +29,7 @@ permalink: people
 			<h2>VISITORS</h2>
 		</header>
 		<div class="row features">
-			<section class="3u 12u(narrower) feature">
+			<section class="1u 12u(narrower) feature">
 				
 			</section>
 			<section class="3u 12u(narrower) feature">
@@ -37,8 +37,8 @@ permalink: people
 					<a href="#" class="image featured"><img src="images/wangwei.jpg" alt="" /></a>
 				</div>
 				<article id="content">
-					<b>Wei Wang(王暐)</b><br/>
-					<b>research direction:</b><br/>
+					<strong>Wei Wang(王暐)</strong><br/>
+					<strong>research direction:</strong><br/>
 					&nbsp;&nbsp;People Re-identification</p>
 				</article>
 			</section>
@@ -53,7 +53,14 @@ permalink: people
 					&nbsp;&nbsp;Scene Parsing</p>
 				</article>
 			</section>
-			
+			<section class="3u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/zhudefa.jpg" alt="" /></a>
+				</div>
+				<b>Defa Zhu(朱德发)</b><br />
+				<b>research direction:</b><br/>
+				&nbsp;&nbsp;Category Classification</p>
+			</section>	
 			<!--<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
@@ -130,17 +137,9 @@ permalink: people
 				<div class="image-wrapper">
 					<a href="#" class="image featured"><img src="images/baorenda.jpg" alt="" /></a>
 				</div>
-				<b>Renda Bao()</b><br />
+				<b>Renda Bao(包仁达)</b><br />
 				<b>research direction:</b><br/>
 				&nbsp;&nbsp;singel human parsing</p>
-			</section>	
-			<section class="3u 12u(narrower) feature">
-				<div class="image-wrapper">
-					<a href="#" class="image featured"><img src="images/zhudefa.jpg" alt="" /></a>
-				</div>
-				<b>Defa Zhu(朱德发)</b><br />
-				<b>research direction:</b><br/>
-				&nbsp;&nbsp;Category Classification</p>
 			</section>	
 		</div>
 	</section>
