add a newer picture

--- a/people.html
+++ b/people.html
@@ -139,8 +139,16 @@ permalink: people
 				</div>
 				<b>Renda Bao(包仁达)</b><br />
 				<b>research direction:</b><br/>
-				&nbsp;&nbsp;singel human parsing</p>
+				&nbsp;&nbsp;single human parsing</p>
 			</section>	
+			<section class="3u 12u(narrower) feature">
+				<div class="image-wrapper">
+					<a href="#" class="image featured"><img src="images/renguanghui.jpg" alt="" /></a>
+				</div>
+				<b>Guanghui Ren(任广辉)</b><br />
+				<b>research direction:</b><br/>
+				&nbsp;&nbsp;</p>
+			</section>
 		</div>
 	</section>
     	<!--section class="container">
