edit some paper link

--- a/people.html
+++ b/people.html
@@ -15,7 +15,7 @@ permalink: people
 			</section>
 			<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper first">
-					<a href="https://liusi-group.com" class="image featured"><img src="" alt="" /></a>
+					<a href="https://liusi-group.com" class="image featured"><img src="images/siliu.png" alt="" /></a>
 				</div>
 				<article id="content">
 					<h2>Si Liu</h2>
