index.html header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         </div>
     </section>
     <section class="7u 12u(narrower) feature">
-        <h1>S-Lab: Segmentation Group</h1>
+        <h1>S-Lab</h1>
         <center><a href="http://iie.ac.cn/jggk_101117/zzjg/kybm/zncl/201203/t20120331_3547828.html">SKLOIS</a>,&nbsp;&nbsp;<a href="http://iie.ac.cn/">Institute of Information Engineering</a>&nbsp;,<a href = "http://www.cas.cn/">CAS</a></center>
     </section>
 
