add some info to xiaozhu

--- a/people.html
+++ b/people.html
@@ -59,7 +59,7 @@ permalink: people
 				</div>
 				<b>Defa Zhu(朱德发)</b><br />
 				<b>research direction:</b><br/>
-				&nbsp;&nbsp;Category Classification</p>
+				&nbsp;&nbsp;Remote sensing image processing | Image generation</p>
 			</section>	
 			<!--<section class="4u 12u(narrower) feature">
 				<div class="image-wrapper">
@@ -147,7 +147,7 @@ permalink: people
 				</div>
 				<b>Guanghui Ren(任广辉)</b><br />
 				<b>research direction:</b><br/>
-				&nbsp;&nbsp;</p>
+				&nbsp;&nbsp;Image segmentation</p>
 			</section>
 		</div>
 	</section>
