--- a/projects/MakeUp.html
+++ b/projects/MakeUp.html
@@ -19,9 +19,9 @@ permalink: projects/makeup
 				<div class="image-wrapper" >
 					<div class="image featured">
 						<video width="575" height="382" autoplay controls="controls" >
-							<source src="26.mp4" type="video/mp4" />
-							<source src="26.ogg" type="video/ogg" />
-							<source src="26.webm" type="video/webm" />
+							<source src="/videos/26.mp4" type="video/mp4" />
+							<source src="/videos/26.ogg" type="video/ogg" />
+							<source src="/videos/26.webm" type="video/webm" />
 							Your browser does not support the video tag.
 						</video>
 					</div>
